# alcove

./: .coderabbit.yaml  .env.example  .gitignore  ACCESSIBILITY.md  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  WHY.md  conductor.json  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pages.yml  publish.yml  release.yml
alcove/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  plugins.py  provenance.py  signer.py  trust.py  wordpress.py
alcove/govdata/: __init__.py  congress.py  congress_billstatus.py  mirrulations.py
alcove/index/: backend.py  embedder.py  keyword.py  language.py  pipeline.py
alcove/ingest/: extractors.py  pipeline.py
alcove/query/: api.py  browse.py  cli.py  retriever.py
alcove/web/: __init__.py  demos.json  theme_loader.py
alcove/web/static/: style.css
alcove/web/templates/: base.html  browse.html  browse_document.html  demos.html  plugin_detail.html  plugins.html  results.html  search.html  view.html
alcove/web/templates/congress/: base.html  results.html  search.html
constraints/: base-runtime.txt
docs/: ARCHITECTURE.md  DESKTOP.md  HOMEBREW.md  MANIFEST.md  MIRRULATIONS_CORPUS.md  OPERATIONS.md  PLUGINS.md  PROVENANCE_LAYER.md  RELEASE_0_4_0_PLAN.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SEED_CORPUS.md  THEMING.md  alcove.schema.json  demo-cli.html  demo-ui.html  demo.html  index.html  multilingual.md
docs/plugins/: academic.md  audio.md  birding.md  embedders-and-backends.md  language.md  photos.md  text-and-documents.md  video.md
packaging/homebrew/: alcove-search.rb.template
scripts/: bootstrap.sh  build_seed_index.py  check_commit_messages.py  check_dependency_integrity.py  check_release_packaging.py  check_release_plan.py  fetch_seed_corpus.py  fetch_seed_founders.py  generate_homebrew_formula.py  ingest_seed_demo.py  install_git_hooks.sh  release.sh  sanitize_commit_message.py  seed_manifest.json  seed_manifest_founders.json  smoke.sh
tests/: conftest.py  test_accessibility.py  test_ada_audit.py  test_api.py  test_asl_gloss.py  test_audit_log.py  test_backend.py  test_batch_ingest.py  test_chroma_sync.py  test_cli.py  test_cli_coverage.py  test_collections.py  test_config.py  test_congress_ingest.py  test_corpus_refresh.py  test_dependency_integrity.py  test_desktop_packaging.py  test_embed_client.py  test_embedder_factory.py  test_embedder_ollama.py  test_embedder_st.py  test_enrichers.py  test_extractors.py  test_github_ingest.py  test_govdata_congress.py  test_govdata_congress_billstatus.py  test_govdata_mirrulations.py  test_homebrew_formula.py  test_index_sign.py  test_keyword.py  test_language_metadata.py  test_mcp_server.py  test_medical_abbrev.py  test_multi_collection.py  test_offline_runtime.py  test_pipeline_empty.py  test_pipeline_metadata.py  test_plugin_registry.py  test_plugin_ui.py  test_plugins.py  (+11 more)
tools/ada-audit/: README.md  audit.py
tools/asl-gloss/: README.md  gloss.py
tools/audit-log/: audit_log.py
tools/batch-ingest/: batch.py
tools/chroma-sync/: sync.py
tools/congress-ingest/: README.md  ingest_bills.py
tools/corpus-refresh/: README.md  refresh.py
tools/embed-client/: client.py
tools/github-ingest/: ingest.py
tools/index-sign/: sign.py
tools/medical-abbrev/: expand.py
tools/plugin-registry/: registry.py
tools/whisper-subtitle/: README.md  subtitle.py
