[project]
name = "alcove-search"
version = "0.3.0"
description = "Local-first document retrieval. Your data never leaves your disk."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "John Malone", email = "john.malone@gmail.com"},
]
keywords = ["retrieval", "search", "local-first", "chromadb", "documents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Indexing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "chromadb>=1.0,<2.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn>=0.30.0,<1.0",
    "pypdf>=6.7.5,<7.0",
    "beautifulsoup4>=4.12,<5.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.6,<1.0",
    "rank-bm25>=0.2",
    "cryptography>=41.0,<47.0",
    "tomli>=2.0,<3.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "python-docx>=1.0", "python-pptx>=1.0", "httpx>=0.27", "defusedxml>=0.7", "requests>=2.28"]
docx = ["python-docx>=1.0"]
pptx = ["python-pptx>=1.0"]
semantic = ["sentence-transformers>=3.0"]
language = ["langdetect>=1.0.9", "transformers>=4.40"]
epub = ["ebooklib>=0.18,<1.0"]
zvec = ["zvec>=0.1"]
tools = ["defusedxml>=0.7", "requests>=2.28"]

[project.urls]
Homepage = "https://spitfire-cowboy.github.io/alcove/"
Repository = "https://github.com/Spitfire-Cowboy/alcove"

[project.scripts]
alcove = "alcove.cli:main"
alcove-mcp = "alcove.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["alcove"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["alcove"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.briefcase]
bundle = "com.alcove-search"
url = "https://github.com/Spitfire-Cowboy/alcove"
