[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alcove-search"
version = "0.1.0"
description = "Local retrieval + semantic search package for Markdown/JSON/TSV/CSV sources"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5,<0.6",
    "pydantic>=2.6,<3.0",
    "typer>=0.12,<0.13",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<0.31",
    "sentence-transformers>=3.0,<4.0",
    "pypdf>=4.2,<5.0",
    "python-docx>=1.1,<2.0",
    "python-pptx>=1.0,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.6,<1.0",
    "rank-bm25>=0.2,<0.3",
    "cryptography>=41.0,<49.0",
    "tomli>=2.0,<3.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "python-docx>=1.0", "python-pptx>=1.0", "httpx>=0.27", "defusedxml>=0.7", "requests>=2.28", "odfpy>=1.4", "openpyxl>=3.1"]
docx = ["python-docx>=1.0"]
odt = ["odfpy>=1.4"]
pptx = ["python-pptx>=1.0"]
xlsx = ["openpyxl>=3.1"]
semantic = ["sentence-transformers>=3.0"]
epub = ["ebooklib>=0.18,<1.0"]
zvec = ["zvec>=0.1"]
tools = ["defusedxml>=0.7", "requests>=2.28"]

[project.scripts]
alcove = "alcove.cli:app"
alcove-server = "alcove.server:main"
alcove-merge-ready-prs = "alcove.tools.merge_ready_prs:app"

[tool.setuptools]
packages = ["alcove"]

[tool.setuptools.package-data]
alcove = ["web/templates/*.html"]
